font page and Category card design
font page and Category card design

--- a/theme/alpha/templates/tmpl-frontpage.mustache
+++ b/theme/alpha/templates/tmpl-frontpage.mustache
@@ -73,7 +73,7 @@
         <div class="container-fluid grid grid-cols-1 lg:grid-cols-2 items-center">
             {{! Banner Left }}
             <div data-aos="fade-up">
-                <h3 class="uppercase text-secondaryColor text-size-15 font-inter tracking-5px banner-title">
+                <h3 class="uppercase text-secondaryColor text-size-15 font-inter tracking-5px banner-title mt-6">
                     {{#str}} ai_learning, theme_alpha {{/str}}
                 </h3>
                 <h1 class="text-2xl text-whiteColor md:text-6xl lg:text-size-50 2xl:text-6xl leading-10 md:leading-18 lg:leading-62px 2xl:leading-18 md:tracking-half lg:tracking-normal 2xl:tracking-half font-bold mb-15px">
@@ -101,6 +101,100 @@
 </section>
  
     <div id="page-wrapper" class="wrapper-fw d-print-block {{#output.courseheadermenu}}rui--course-with-nav{{/output.courseheadermenu}} {{^output.courseheadermenu}}rui--course-witout-nav{{/output.courseheadermenu}}">
+     <section class="wrapper-xl mt-6">
+     <div class="container-fluid">
+        <div class="row align-items-center">
+          <div class="col-sm-6">
+             <h2>Welcome to Atlearn LMS – Your Complete Learning and Teaching Platform</h2>
+             <p>Atlearn LMS is an advanced online learning management system designed to make education seamless, interactive, and effective. Whether you're an educator, institution, or corporate trainer, our web-based e-learning platform provides everything you need to create, manage, and deliver engaging courses.</p>
+          </div>
+          <div class="col-sm-6">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K5YdF5S6yrE?si=wEyfYs46L6mppSgb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>     
+     </div>
+    </section>
+
+ <section class="wrapper-xl mt-6">
+     <div class="container-fluid">
+        <div class="row align-items-center">
+        <div class="col-sm-6">
+           <div class="">
+             <img class="img-fluid" src="{{config.wwwroot}}/theme/alpha/doc/website/teacher-my-courses.webp" alt="App Screeshot" title="herobanner icon" />    
+            </div>     
+          </div>
+          <div class="col-sm-6">
+             <h2>Effortless Course Management</h2>
+             <p>Our teaching and learning platform allows educators to design, customize, and deliver courses with ease.</p>
+             <ul>
+               <li>A powerful white-label online training platform tailored for institutions and businesses.</li>
+               <li>Seamless integration with student online learning platforms for a smooth learning experience.</li>
+               <li>AI-powered automation for efficient course scheduling and evaluation.</li>
+             </ul>
+          </div>
+        </div>     
+     </div>
+    </section>
+
+     <section class="wrapper-xl mt-6">
+     <div class="container-fluid">
+        <div class="row align-items-center">
+          <div class="col-sm-6">
+             <h2>Next-Level Virtual Classrooms & Online Meetings</h2>
+             <p>Transform your online training with Atlearn’s virtual classroom training software. </p>
+             <p>Host interactive sessions, webinars, and live discussions with cutting-edge tools for real-time collaboration. Our platform supports:</p>
+             <ul>
+               <li>Engaging virtual classroom for students with interactive whiteboards and breakout rooms.</li>
+               <li>Integration with web-based training platforms to enhance e-learning experiences.</li>
+             </ul>
+          </div>
+          <div class="col-sm-6">
+           <div class="">
+             <img class="img-fluid" src="{{config.wwwroot}}/theme/alpha/doc/website/teacher-quiz1.webp" alt="App Screeshot" title="herobanner icon" />    
+            </div>     
+          </div>
+        </div>     
+     </div>
+    </section>
+
+     <section class="wrapper-xl mt-6">
+     <div class="container-fluid">
+        <div class="row align-items-center">
+        <div class="col-sm-6">
+           <div class="">
+             <img class="img-fluid" src="{{config.wwwroot}}/theme/alpha/doc/website/teacher-quiz-list.webp" alt="App Screeshot" title="herobanner icon" />    
+            </div>     
+          </div>
+          <div class="col-sm-6">
+             <h2>LMS for Kids – Story Writing & Language Development</h2>
+             <p>Atlearn LMS now features a dedicated space for young learners to explore storytelling and language development through Storylane. Designed for students, this interactive platform nurtures creativity and literacy skills in both English and Tamil.</p>
+             <ul>
+               <li>A powerful white-label online training platform tailored for institutions and businesses.</li>
+               <li>Seamless integration with student online learning platforms for a smooth learning experience.</li>
+               <li>AI-powered automation for efficient course scheduling and evaluation.</li>
+             </ul>
+          </div>
+        </div>     
+     </div>
+    </section>
+
+     <section class="wrapper-xl mt-6">
+     <div class="container-fluid">
+        <div class="row align-items-center">
+          <div class="col-sm-6">
+             <h2>Why Choose Atlearn LMS?</h2>
+             <ul>
+               <li>All-in-one web-based e-learning platform for schools, universities, and businesses.</li>
+               <li>A feature-rich online learning management system with AI-driven tools.</li>
+               <li>Customizable solutions for educational institutions and corporate training programs.</li>
+             </ul>
+          </div>
+          <div class="col-sm-6">
+          
+          </div>
+        </div>     
+     </div>
+    </section>
 
         {{{ output.standard_top_of_body_html }}}
 
